nav bar and landing page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    
+    <nav>
+        <div class="logo">
+        </div>
+        <div class="navitems">
+            <a href="#">Home</a>
+            <a href="#">About Us</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+        </div>
+    </nav>
+    <section class="hero hero-contain">
+        <div class="hero-contain">
+            <h1 class="hero-title">Welcome to <span class="hero-titleSpan">LifeStar Recycling</span></h1>
+            <p class="hero-subtext">Eliminating environmental pollution through recycling plastic waste into fuel</p>
+            <button class="hero-btn">Learn More</button>
+        </div>
+    </section>
+    <!-- About Us Section Starts Here -->
+
 </body>
+    <script src="./script.js"></script>
 </html>
